--- a/config/admin-panel/packages/vs_application.yaml
+++ b/config/admin-panel/packages/vs_application.yaml
@@ -4,6 +4,8 @@ vs_application_instalator:
             classes:
                 model: App\Entity\Application\InstalationInfo
 vs_application:
+    project_type: catalog_application
+    
     resources:
         application:
             classes:
@@ -381,34 +383,6 @@ vs_application:
                         display: false
                     
                     ###########################
-                    # Pricing Plan Entries
-                    ###########################
-                    pricing_plan_category_index:
-                        name: vs_application.menu.pricing_plan_categories
-                        route: vs_payment_pricing_plan_category_index
-                    pricing_plan_category_create:
-                        name: vs_application.menu.create_pricing_plan_category
-                        route: vs_payment_pricing_plan_category_create
-                    pricing_plan_category_update:
-                        name: vs_application.menu.edit_pricing_plan_category
-                        route: vs_payment_pricing_plan_category_update
-                        routeParameters:
-                          id: int
-                        display: false
-                    pricing_plan_index:
-                        name: vs_application.menu.pricing_plans_listing
-                        route: vs_payment_pricing_plan_index
-                    pricing_plan_create:
-                        name: vs_application.menu.create_pricing_plan
-                        route: vs_payment_pricing_plan_create
-                    pricing_plan_update:
-                        name: vs_application.menu.edit_pricing_plan
-                        route: vs_payment_pricing_plan_update
-                        routeParameters:
-                          id: int
-                        display: false
-                        
-                    ###########################
                     # Coupon Entries
                     ###########################
                     coupon_index:
@@ -473,38 +447,6 @@ vs_application:
                         name: vs_application.menu.stripe_coupons
                         route: gateway_config_stripe_coupon_objects_index
                     
-            catalog:
-                name: vs_application.menu.catalog
-                uri: "javascript:;"
-                attributes:
-                    iconClass: icon_genius
-                    breadcrumb_route: vs_payment_product_index
-                childs:
-                    catalog_category_index:
-                        name: vs_application.menu.catalog_categories
-                        route: vs_payment_product_category_index
-                    catalog_category_create:
-                        name: vs_application.menu.create_catalog_category
-                        route: vs_payment_product_category_create
-                    catalog_category_update:
-                        name: vs_application.menu.edit_catalog_category
-                        route: vs_payment_product_category_update
-                        routeParameters:
-                          id: int
-                        display: false
-                    catalog_product_index:
-                        name: vs_application.menu.catalog_products
-                        route: vs_payment_product_index
-                    catalog_product_create:
-                        name: vs_application.menu.create_catalog_product
-                        route: vs_payment_product_create
-                    catalog_product_update:
-                        name: vs_application.menu.edit_catalog_product
-                        route: vs_payment_product_update
-                        routeParameters:
-                          id: int
-                        display: false
-             
             orders_and_payments:
                 name: vs_application.menu.orders_and_payments
                 uri: "javascript:;"
@@ -541,7 +483,71 @@ vs_application:
                     clear_session:
                         name: vs_application.menu.clear_session
                         route: vs_payment_developement_clear_session
-        
+                        
+        mainCatalogMenu:
+            catalog:
+                name: vs_application.menu.catalog
+                uri: "javascript:;"
+                attributes:
+                    iconClass: icon_genius
+                    breadcrumb_route: vs_payment_product_index
+                childs:
+                    catalog_category_index:
+                        name: vs_application.menu.catalog_categories
+                        route: vs_catalog_product_category_index
+                    catalog_category_create:
+                        name: vs_application.menu.create_catalog_category
+                        route: vs_catalog_product_category_create
+                    catalog_category_update:
+                        name: vs_application.menu.edit_catalog_category
+                        route: vs_catalog_product_category_update
+                        routeParameters:
+                          id: int
+                        display: false
+                    catalog_product_index:
+                        name: vs_application.menu.catalog_products
+                        route: vs_catalog_product_index
+                    catalog_product_create:
+                        name: vs_application.menu.create_catalog_product
+                        route: vs_catalog_product_create
+                    catalog_product_update:
+                        name: vs_application.menu.edit_catalog_product
+                        route: vs_catalog_product_update
+                        routeParameters:
+                          id: int
+                        display: false
+                        
+            pricing_plans:
+                name: vs_application.menu.pricing_plans
+                uri: "javascript:;"
+                attributes:
+                    iconClass: icon_genius
+                    breadcrumb_route: vs_catalog_pricing_plan_index
+                childs:
+                    pricing_plan_category_index:
+                        name: vs_application.menu.pricing_plan_categories
+                        route: vs_catalog_pricing_plan_category_index
+                    pricing_plan_category_create:
+                        name: vs_application.menu.create_pricing_plan_category
+                        route: vs_catalog_pricing_plan_category_create
+                    pricing_plan_category_update:
+                        name: vs_application.menu.edit_pricing_plan_category
+                        route: vs_catalog_pricing_plan_category_update
+                        routeParameters:
+                          id: int
+                        display: false
+                    pricing_plan_index:
+                        name: vs_application.menu.pricing_plans_listing
+                        route: vs_catalog_pricing_plan_index
+                    pricing_plan_create:
+                        name: vs_application.menu.create_pricing_plan
+                        route: vs_catalog_pricing_plan_create
+                    pricing_plan_update:
+                        name: vs_application.menu.edit_pricing_plan
+                        route: vvs_catalog_pricing_plan_update
+                        routeParameters:
+                          id: int
+                        display: false
         
         profileMenu:
             contact:
