--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/http-client": "6.4.*",
         
         "vankosoft/application": "1.10.*",
+        "vankosoft/application-themes": "^1.0",
         "vankosoft/catalog-bundle": "^1.3",
         
         "trickeyone/intl-subdivision": "^4.0"
