--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
         "symfony/flex": "^1.17|^2",
         "symfony/notifier": "6.4.*",
         "symfony/runtime": "6.4.*",
+        
         "symfony/http-client": "6.4.*",
+        "guzzlehttp/promises": "^2.0",
+        "php-http/httplug": "^2.4",
         
         "vankosoft/application": "1.12.*",
         "vankosoft/application-themes": "^1.2",
@@ -59,7 +62,8 @@
             "composer/installers": true,
             "symfony/flex": true,
             "oomphinc/composer-installers-extender": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "php-http/discovery": true
         }
     },
     "autoload": {
