--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "jquery-ui-dist": "^1.12.1",
         "jquery-validation": "^1.20",
         "jquery-duplicate-fields": "^1.1.0",
-        "mdb-ui-kit": "^3.6.0",
+        "mdb-ui-kit": "^8.1",
         "moment": "^2.29.1",
         "popper": "^1.0.1",
         "popper.js": "^1.15.0",
@@ -62,7 +62,11 @@
         "apexcharts": "^4.3",
 
         "code-prettify-google": "^1.0.1",        
-        "@stripe/stripe-js": "^2.1"
+        "@stripe/stripe-js": "^2.1",
+        
+        "@analytics/google-analytics": "^1.1",
+        "analytics": "^0.8"        ,
+        "@types/dlv": "^1.0"
     },
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
