--- a/composer.json
+++ b/composer.json
@@ -35,14 +35,12 @@
         "guzzlehttp/promises": "^2.0",
         "php-http/httplug": "^2.4",
         
-        "vankosoft/application": "1.13.*",
+        "vankosoft/application": "1.14.*",
         "vankosoft/application-themes": "^1.6",
-        "vankosoft/catalog-bundle": "^2.5",
+        "vankosoft/catalog-bundle": "^2.6",
         "vankosoft/borica-bundle": "^0.2",
         "vankosoft/vendo-sdk-bundle": "^0.1",
-        "vankosoft/paysera-bundle": "^0.1",
-        
-        "doctrine/dbal": "^3.0"
+        "vankosoft/paysera-bundle": "^0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
